--- a/src/components/orders/Orders.module.scss
+++ b/src/components/orders/Orders.module.scss
@@ -44,6 +44,8 @@
     position: relative;
     margin:0 auto;
     min-height:130vh;
+    min-width:115rem;
+    overflow-x: scroll;
 
     .backgroundColor{
         width: 100vw;
@@ -123,7 +125,7 @@
             width:70%;
             margin:2rem 0;
             p{
-                font-size:1.27rem;
+                font-size:1.4rem;
                 line-height:2rem;
                 font-weight:500;
             }
@@ -175,6 +177,8 @@
                         padding:.8rem 2rem;
                         border:.3px solid var(--box-background-color);
                         background-color:var(--box-background-color);
+                        border:.3px solid var(--shadow-color);
+                        border-radius:.7rem;
                     }
                 }
             }
@@ -227,6 +231,7 @@
     
     .bottom{
         margin-top:4rem;
+        margin-right: 0.3rem;
     }
 }
 }
