--- a/src/components/home/DashHome.module.scss
+++ b/src/components/home/DashHome.module.scss
@@ -22,6 +22,7 @@
         width:100%;
         height: 100%;
         overflow-y: scroll;
+        overflow-x:hidden;
         scrollbar-width: thin;
         scrollbar-color: transparent transparent;
         background-color: var(--background-color);
