--- a/src/components/orders/table/OrdersTable.module.scss
+++ b/src/components/orders/table/OrdersTable.module.scss
@@ -16,6 +16,8 @@
 
                 .content {
                     background-color: var(--box-background-color);
+                    box-shadow:0 0 6px var(--shadow-color);
+                    
                     padding: .6rem 1rem;
                     border-radius: 1.5rem;
                     display: flex;
@@ -35,7 +37,7 @@
 
                     p {
                         padding-top: .4rem;
-                        font-size: 1.2rem;
+                        font-size: 1.3rem;
                         font-weight: normal;
                     }
 
@@ -144,6 +146,7 @@
                         gap: 1rem;
                         padding: .5rem 1rem;
                         background-color: var(--box-background-color);
+                        border:.3px solid var(--shadow-color);
                         border-radius: 1rem 1rem 0 0;
 
                         h3 {
@@ -234,7 +237,7 @@
 
                             .dropdownContainer {
                                 position: absolute;
-                                background: rgba(0, 0, 0, 0.25);
+                                background: var(--box-background-color);
                                 box-shadow: 0 8px 32px 0 rgba(black, 0.37);
                                 backdrop-filter: blur(12px);
                                 -webkit-backdrop-filter: blur(12px);
@@ -256,7 +259,7 @@
 
                                         li {
                                             padding: 1rem;
-                                            font-size: 1.2rem;
+                                            font-size: 1.3rem;
 
                                             &:hover {
                                                 background-color: var(--border-color);
@@ -283,10 +286,10 @@
                             thead {
                                 tr {
                                     th {
-                                        font-size: 1.2rem;
+                                        font-size: 1.3rem;
                                         font-weight: 600;
                                         padding: 2rem 1rem 2rem 1rem;
-                                        // color: var(--defined-text-color);
+                                        color: var(--defined-text-color);
                                         border-bottom: 1px solid var(--blue-color);
 
                                         &:not(:last-child) {
@@ -300,6 +303,7 @@
                                 tr {
                                     &:nth-child(odd) {
                                         background-color: var(--box-background-color);
+                                        box-shadow: 0 0 7px var(--shadow-color);
                                     }
 
                                     .productUnitSize {
