--- a/src/components/products/addNew/AddNew.module.scss
+++ b/src/components/products/addNew/AddNew.module.scss
@@ -6,12 +6,17 @@
         .formContainer{
             display:flex;
             margin-top:3rem;
+            gap:4rem;
             
             .left{
                 flex:1;
                 .formGroup{
                     display:flex;
                     flex-direction: column;
+                    &:not(:last-child){
+                        margin-bottom:2.5rem;
+                    }
+            
                     label{
                         font-size:1.2rem;
                         font-weight: 600;
@@ -31,41 +36,85 @@
                     }
                     input{
                         padding:1.1rem 1rem;
-                        border-radius: .8rem;
+                        border-radius:.5rem;
                         background-color:var(--box-background-color);
                         border:.3px solid transparent;
-
-                        &:not(:last-child){
-                            margin-bottom: 2.5rem;
-                        }
+                        border:.3px solid var(--shadow-color);
+                        // font-family: inherit;
+                      color:var(--dark-grey);
 
                         &:focus{
                             outline:none;
-                            border:.3px solid rgba(255, 255, 255, 0.074);
+                            border:.3px solid rgba(100, 152, 255, 0.808);
+                        }
+                        &::placeholder{
+                            color: var(--dark-grey);
+                        }
+                    }
+                    textarea{
+                        padding:1.1rem 1rem;
+                        border-radius:.5rem;
+                        background-color:var(--box-background-color);
+                        border:.3px solid transparent;
+                        border:.3px solid var(--shadow-color);
+                        font-family: inherit;
+                        height:27rem;
+                        &:focus{
+                            outline:none;
+                            border:.3px solid rgba(100, 152, 255, 0.808);
                         }
                     }
                     .productName{
-                        margin-bottom: 2.5rem;
+
                     }
                 }
 
                 .categoryGroups{
                     display:flex;
+                    gap:1.2rem;
+                    margin-bottom:2.5rem;
 
-                    .formGroup:first-child{
+                    .formGroup{
+                        
+                        
+                    }
+                    .category{
+                        position:relative;
                         flex:3;
+                        
 
                         input{
                             width:100%;
                         }
                     }
-                    .formGroup:nth-child(2){
+                    .gender{
+                        flex:1;
+                    }
+                    .subCategory{
                         flex:1;
                     }
                 }
             }
             .right{
                 flex:1;
+                overflow:hidden;
+                .imagesContainer{
+                    .description{
+                        font-size:1.3rem;
+
+                    }
+                }
+                .fashionProps{
+                    display:flex;
+                    width:100%;
+                    gap:1rem;
+                    .sizeContainer{
+                        flex:3;
+                    }
+                    .colorProps{
+                        flex:1;
+                    }
+                }
             }
         }
     }
