--- a/src/components/utilities/button/Button.module.scss
+++ b/src/components/utilities/button/Button.module.scss
@@ -10,6 +10,7 @@
     border-radius:.6rem;
     justify-content: center;
     transition:all .3s step-start;
+    border:.3px solid var(--shadow-color);
 
 
     &:hover{
