--- a/src/components/products/addNew/AddNew.module.scss
+++ b/src/components/products/addNew/AddNew.module.scss
@@ -96,25 +96,84 @@
                 }
             }
             .right{
+
+
                 flex:1;
                 overflow:hidden;
-                .imagesContainer{
-                    .description{
-                        font-size:1.3rem;
+                display:flex;
+                flex-direction: column;
+                justify-content: space-between;
 
+                .top{
+                    .imagesContainer{
+                        .description{
+                            font-size:1.3rem;
+    
+                        }
+                    }
+                    .fashionProps{
+                        display: flex;
+                        margin-top: 2.5rem;
+                        width:100%;
+                        gap:1rem;
+                        .sizeContainer{
+                            flex:3;
+                        }
+                        .colorProps{
+                            
+                            flex:1;
+                        }
+                    }
+                    .productDate{
+                        width:100%;
+                        .formGroup{
+                            width:100%;
+                            margin-top:2.5rem;
+                            label{
+                                font-size:1.2rem;
+                                font-weight: 600;
+                                margin-bottom:1rem;
+                                color:var(--defined-text-color);
+                                display:flex;
+                                align-items: center;
+                                gap:.9rem;
+        
+                                span{
+                                    display:flex;
+                                    align-items: flex-end;
+                                    justify-content: center;
+                                    font-size:1.2rem;
+                                    color:var(--dark-grey);
+                                }
+                            }
+                            input{
+                                width:100%;
+                                padding:1.1rem 1rem;
+                                border-radius:.5rem;
+                                background-color:var(--box-background-color);
+                                border:.3px solid transparent;
+                                border:.3px solid var(--shadow-color);
+                                // font-family: inherit;
+                              color:var(--dark-grey);
+        
+                                &:focus{
+                                    outline:none;
+                                    border:.3px solid rgba(100, 152, 255, 0.808);
+                                }
+                                &::placeholder{
+                                    color: var(--dark-grey);
+                                }
+                            }
+                        }
                     }
                 }
-                .fashionProps{
-                    display:flex;
-                    width:100%;
-                    gap:1rem;
-                    .sizeContainer{
-                        flex:3;
-                    }
-                    .colorProps{
-                        flex:1;
-                    }
+                .bottom{
+.save{
+    display:flex;
+    justify-content: flex-end;
+}
                 }
+              
             }
         }
     }
