--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -11,6 +11,7 @@
     min-height: 100vh;
     max-height: 100vh;
     flex-direction: column;
+    border-right:.3px solid var(--box-border);
     
 
     .avatar {
