updated the colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,11 +29,10 @@
     --text-white:white;
     --defined-text-color:rgb(255, 255, 255);
     --box-border:rgb(34, 42, 47);
-    
-    /* --background-color:#212332;  */
-    /* --box-background-color:#2A2D3E; */
-     --background-color:#010409;
-    --box-background-color:#0C0F15;
+    --background-color:#212332;  
+    --box-background-color:#2A2D3E;
+     /* --background-color:#010409; */
+    /* --box-background-color:#0C0F15; */
     --hoverBackground: rgba(98, 132, 126, 0.398);
     --overlay-icon-color:rgba(49, 49, 73, 0.38);
     --border-color:rgb(57, 60, 64);
